# smashclip

./: .gitignore  LICENSE  LICENSE-DATA  README.md  pyproject.toml
data/annotations/: smashclip_en.jsonl  smashclip_ja.jsonl
data/features/: README.md
data/features/a1_audio/: 0013fccd-624e-4a0a-98b1-6be6ec2ec76c.npy  00154b38-2ca1-46ed-bd0d-277aacf94558.npy  0031faaa-43f8-45b2-a3ba-5f33507a9d7d.npy  004565f8-6c15-478f-a418-1df7e93574e0.npy  004ccd00-d797-4f61-9499-c88e1ba8f448.npy  006030f0-4fed-4239-b533-fe82e87f26a6.npy  006095bb-8035-4d52-a7a2-c9ea145dcf84.npy  00b84712-1db3-4b52-a842-e4e168ab3c8a.npy  00be6e68-73ab-4ecf-9d2f-5eb9a7a653d0.npy  01004365-98bd-4121-9d14-e63059341a8e.npy  01595dce-e6ad-4350-b170-37ecd20032d4.npy  015de563-7bcf-4c47-8fc2-031bd2e5dc84.npy  01994c21-08e9-4623-9a93-d5ce9b33ade5.npy  01f99df9-6266-4089-931d-8210e7e76e19.npy  02061f72-1fcc-4165-bc27-13c45a555852.npy  022624b3-920a-4b69-84e5-e3a0e5190367.npy  0232188f-18f5-4105-81de-2d7388871d18.npy  0249cde5-b275-4c44-a712-abe7d049c622.npy  02568219-1775-4022-a54d-b13e3b709681.npy  02583991-cf7d-4e1c-a583-2a114e4b9e2a.npy  (+2482 more)
data/splits/: rationale_test.json  rationale_train.json  rationale_val.json  test.json  train.json  val.json
docs/: character_frequencies.md  judge_prompt.md  per_tag_scores.md  prosody_correlations.md  tag_definitions.md  training_details.md  vlm_prompts.md
feature_extraction/: extract_audio.py  extract_prosody.py  extract_transcript.py  extract_visual.py
scripts/: train.py
src/: dataset.py  fusion.py  metrics.py  models.py  utils.py
(+12048 files in other folders)
